kubernetes/kopiur-system/kopiur/repository/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia-ui
  namespace: kopiur-system
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
    - kopia.whoverse.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoverse-kopia-ui
          port: 51515
